    which could result in calling some meta-arguments in the wrong context.
    Thanks to Ulrich Neumerkel for the illustrating example in the SWI-Prolog
    mailing list.

    Updated the Logtalk compiler in order to avoid printing warnings about
    missing references to the "expanding" and "monitoring" built-in protocols
    when compiling modules as objects.

    Corrected a bug in the SWI-Prolog "swihooks.lgt" file that resulted in
    a bogus error message about an invalid Logtalk flag when consulting a
    Prolog file when there is a Logtalk source file with the same name in
    the same directory.

    Added missing support for proprietary built-in meta-predicates to the
    B-Prolog, SICStus Prolog, SWI-Prolog, XSB, and YAP config files.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order to
    override the meta-predicate templates for the consult/1 and load_files/2
    built-in predicates.

    Added an implementation of a map_reduce/5 meta-predicate to the library
    object "meta".

    Added an implementation of a command_line_arguments/1 predicate to the
    "cc" example.

    Updated the "lambdas" and "metapredicates" examples, illustrating how to
    calculate Fibonacci numbers using a fold left meta-predicate. Updated the
    "metapredicates" example with an usage example of the map_reduce/5 meta-
    predicate.

    Updated the "problog" example, adding preliminary support for the new
    annotated disjunctions syntax.

    Added a "magic" element to the Logtalk mime-type file for the
    freedesktop.org shared mime-info database.


2.42.0 - December 1, 2010

    Added an implementation of persistent object flags, contributed by
    Theofrastos Mantadelis.

    Added a new pair of built-in predicates, conforms_to_protocol/2-3,
    implementing the transitive closure of the protocol implementation
    relation.

    Added an experimental directive, annotation/1, for supporting Logtalk