@@ -2,4 +2,4 @@ logtalk (Release 2.42.1-1) unstable; urgency=low
 
   * Initial Release.
 
- -- Paulo Moura <pmoura@logtalk.org> Wednesday December 22 22:00:00 WEST 2010
+ -- Paulo Moura <pmoura@logtalk.org> Wednesday December 22 02:00:00 WEST 2010
